# CEDARS

./: .docker-env  .env  .env.sample  .gitignore  .gitmodules  .sample.env  404.html  CITATION.cff  Dockerfile  README.md  TERMS_OF_USE (1).md  TERMS_OF_USE.md  annotations.db  application.ipynb  cedars.app  docker-compose-gpu.yml  docker-compose.yml  gunicorn.conf.py  index.html  mkdocs.yml  nginx.conf  objects.inv  prometheus.yml  pyproject.toml  requirements.txt  search.html  style.css
.github/workflows/: ci.yml
ABOUT/: index.html
CEDARS_admin_manual/: index.html
CEDARS_annotator_manual/: index.html
TERMS_OF_USE/: index.html
app/: Dockerfile  requirements.txt
app/app/: .docker-env  Dockerfile  NLP_processor.py  __init__.py  add_user_page.py  adjudicate_records_page.py  auth.py  config.py  database_funcs.py  docker-compose.yml  download_annotations.py  flask_application.py  login_page.py  mongodb_client.py  project_details_page.py  requirements.txt  save_adjudications.py  session_functions.py  stats.py  upload_data.py  upload_query.py  wsgi.py
app/app/static/: annotations.csv
app/app/templates/: 500.html  adjudicate_records.html  annotations_complete.html  base.html  bootstrap.html  create_admin.html  home.html  index.html  layout.html  login.html  no_patients.html  proj_details.html  save.html  stats.html  upload_file.html  upload_query.html
basic_concepts/: index.html
cedars/: .docker-env  .dockerignore  .env  .env.sample  .sample.app.env  1-spacy-features.ipynb  Dockerfile  cedars.db  config.py  docdb-test.py  docker-compose.yml  dump.rdb  gunicorn.conf.py  mkdocs.yml  nginx.conf  pyproject-setup.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_db.db
cedars/app/: NLP_processor.py  __init__.py  add_user_page.py  adjudication_handler.py  api.py  auth.py  cedars_enums.py  config.py  database.py  date_finder.py  db.py  db_backwards_compat.py  download_annotations.py  email_verification.py  make_rq.py  mongo_database.py  mongo_db.py  network_conn.py  nlpprocessor.py  ops.py  regex-tester.py  sqlalchemy_tables.py  stats.py  wsgi.py
cedars/app/start/.minio.sys/: format.json
cedars/app/static/: annotations.csv  applications.css  superbio_event_listener.js  superbio_login_listener.js  superbio_logout_listener.js  trusted_superbio_origins.js
cedars/app/templates/: about.html  add_user.html  base.html  bootstrap.html  index.html  stats.html
cedars/app/templates/auth/: login.html  register.html  verify_email.html
cedars/app/templates/ops/: adjudicate_records.html  annotations_complete.html  download.html  internal_processes.html  job_status.html  project_details.html  upload_file.html  upload_query.html
cedars/cedars/: .env  Dockerfile
cedars/cedars/app/: __init__.py  auth.py  database.py  db.py  mongo_db.py  nlpprocessor.py  ops.py  stats.py  wsgi.py
cedars/cedars/app/templates/auth/: login.html
cedars/cedars/app/templates/ops/: project_details.html  upload_file.html  upload_query.html
cedars/docs/: download_annotations.md
cedars/start/.minio.sys/: format.json
cedars/start/.minio.sys/tmp/.trash/09910e04-ac3a-4468-bce3-d23598958241/: xl.meta.bkp
cedars/start/.minio.sys/tmp/.trash/3a0f2338-6981-475e-abcd-2e5271785b69/: xl.meta.bkp
cedars/start/.minio.sys/tmp/.trash/4032c70e-a614-409a-9782-afeefa920d10/: xl.meta.bkp
cedars/start/.minio.sys/tmp/.trash/53d2e65e-bdb8-4ccc-bd84-4fd528e1367d/: xl.meta.bkp
cedars/tests/: conftest.py  patient_test_data.csv  simulated_patients.parquet  simulated_patients.pq  test_adj.py  test_auth.py  test_conf.py  test_db.db  test_db.py  test_db_funcs.py  test_factory.py  test_nlpprocessor.py  test_ops.py  test_output.py  test_sql.py
developer_tools/: index.html
docs/: ABOUT.md  CEDARS_admin_manual.md  CEDARS_annotator_manual.md  CEDARS_quickstart.md  README.md  TERMS_OF_USE.md  basic_concepts.md  developer_tools.md  download_annotations.md  getting_started.md  index.md  query_database.md  upload_data.md  upload_file_format.md
docs/pics/: GitHub Docker Schema C.ai  GitHub Schema 7 B.ai
download_annotations/: index.html
getting_started/: index.html
mongo_config/: keyfile
nginx/: nginx.conf
notebooks/: 2-sample-cedars-flow.ipynb
pines-api/: .gitignore  Dockerfile  README.rst  config.ini  pines.py  pyproject.toml  requirements.txt
pines-api/docs/source/: conf.py  index.rst  usage.rst
query_database/: index.html
redis/: Dockerfile  init.sh  redis.conf
search/: search_index.json
start/.minio.sys/: format.json
upload_data/: index.html
upload_file_format/: index.html
