[tool.poetry]
name = "pycedars"
version = "0.1.0"
description = ""
authors = ["SinghR7 <SinghR7@mskcc.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
Flask-Caching = "^2.0.2"
Flask-Login = "^0.6.2"
python-dotenv = "^1.0.0"
redis = "^4.6.0"
pytest = "^7.4.0"
pymongo = "^4.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.4"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
