[tool.poetry]
name = "pycedars"
version = "0.1.0"
description = ""
authors = ["SinghR7 <SinghR7@mskcc.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
Flask-Caching = "^2.0.2"
Flask-Login = "^0.6.2"
python-dotenv = "^1.0.0"
scispacy = "^0.5.2"
flask-pymongo = "^2.3.0"
jupyterlab = "^4.0.2"
pandas = "^2.0.2"
en-core-sci-md = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.1/en_core_sci_md-0.5.1.tar.gz"}
negspacy = "^1.0.4"
flask-session = "^0.5.0"
faker = "^19.3.0"
en-core-sci-lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.1/en_core_sci_lg-0.5.1.tar.gz"}
coverage = "^7.3.0"
minio = "^7.1.16"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"
flake8 = "^6.1.0"
