[tool.poetry]
name = "pycedars"
version = "0.1.0"
description = ""
authors = ["SinghR7 <SinghR7@mskcc.org>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Flask-Caching = "^2.0.2"
Flask-Login = "^0.6.2"
python-dotenv = "^1.0.0"
scispacy = "^0.5.3"
flask-pymongo = "^2.3.0"
pandas = "^2.0.2"
scipy = "^1.9.0"
negspacy = "^1.0.3"
flask-session = "^0.5.0"
faker = "^19.3.0"
minio = "^7.1.16"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pydantic = "^1.9.0"
fastparquet = "^2023.8.0"
loguru = "^0.7.2"
tdqm = "^0.0.1"
en-core-sci-lg = {url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.3/en_core_sci_lg-0.5.3.tar.gz"}
gunicorn = "^22.0.0"
beautifulsoup4 = "^4.12.3"
pyarrow = "^16.0.0"
idna = "^3.7"
flask = "^3.0.3"
pymongo = "=4.2"
rq = "^1.16.2"
tenacity = "9.0.0"
passvalidate = "0.1.2"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"
flake8 = "^6.1.0"
jupyterlab = "^4.0.2"
coverage = "^7.3.0"
pytest-cov = "^5.0.0"
mongomock = "^4.1.2"
fakeredis = {extras = ["lua"], version = "^2.23.0"}
poetry-plugin-export = "^1.7.1"
pytest-minio-mock = "^0.4.13"
pytest-dotenv = "^0.5.2"