[tool.poetry]
name = "pines-api"
version = "0.1.0"
description = "API to serve pines models"
authors = ["Rohan Singh <singhrohan@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
transformers = "^4.36.2"
sphinx = "^7.2.6"
furo = "^2023.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pip-audit = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
